# gh-unfollower

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  with-poetry.sh  without-poetry.sh
src/: main.py
src/client/: __init__.py  client.py  config.py
src/graphql/: followers.graphql  following.graphql  unfollow.graphql
